2011-02-17 Miguel de Dios  <miguel.dedios@artica.es>

	* images/os_icons/android_small.png,
	images/os_icons/embedded_small.png: added lost image files.
	
	Fixes: #3183495

2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/alerts/configure_alert_template.php
	  godmode/alerts/alert_templates.php
	  godmode/alerts/configure_alert_action.php
	  godmode/alerts/alert_actions.php
          godmode/alerts/alert_list.builder.php: If user is not admin then can't
	edit/delete/copy alerts/templates of other groups.

2011-02-17 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: fixed the type of icon
	when create and after edit.

2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/visual_console/index.php: Correction for my last commit. Now in this 
	view users can see maps of group "All". 

2011-02-17 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js: cleaned the forgotten
	calls to generate traces for firebug.

2011-02-17 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.editor.php: fixed the panel
	propierties for icon in the edition and creation, now it haven't label color
	and have preview icon and map link.

2011-02-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_alerts.php: New function get_alert_actions_filter.
	* operation/agentes/estado_agente.php: If user is not admin or doesn't have
	'PM' privileges then don't display alerts of others groups.
	* godmode/alerts/configure_alert_template.php: If user is not admin or doesn't have
	'PM' privileges then don't display templates of others groups.
	* godmode/alerts/configure_alert_action.php: Don't show "create command" option
	in this view if current user is not administrator or or doesn't have
	'PM' privileges.